- bridge implementation. - small fix to remove <> in AstIRI building