@@ -1,6 +1,5 @@
-package fr.inria.corese.core.next.query.sparql.ast;
+package fr.inria.corese.core.next.query.impl.sparql.ast;
 
-import fr.inria.corese.core.next.query.impl.sparql.ast.*;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -11,9 +10,8 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
- * Unit tests for SPARQL AST types in {@code fr.inria.corese.core.next.query.sparql.ast}:
+ * Unit tests for SPARQL AST types in {@code fr.inria.corese.core.next.query.impl.sparql.ast}:
  * term types (VarAst, IriAst, LiteralAst), TriplePatternAst, BgpAst, GroupGraphPatternAst, QueryAst.
- *
  */
 class SparqlAstTest {
 
@@ -70,7 +68,7 @@ class SparqlAstTest {
         @Test
         @DisplayName("implements TermAst")
         void implementsTermAst() {
-            assertTrue(new VarAst("s") instanceof TermAst);
+            assertInstanceOf(TermAst.class, new VarAst("s"));
         }
     }
 
@@ -83,8 +81,8 @@ class SparqlAstTest {
         @Test
         @DisplayName("creates with valid raw IRI")
         void validRaw() {
-            IriAst i = new IriAst("<http://example.org/>");
-            assertEquals("<http://example.org/>", i.raw());
+            IriAst i = new IriAst("http://example.org/");
+            assertEquals("http://example.org/", i.raw());
         }
 
         @Test
@@ -120,7 +118,7 @@ class SparqlAstTest {
         @Test
         @DisplayName("implements TermAst")
         void implementsTermAst() {
-            assertTrue(new IriAst("x") instanceof TermAst);
+            assertInstanceOf(TermAst.class, new IriAst("x"));
         }
     }
 
@@ -187,14 +185,14 @@ class SparqlAstTest {
         @DisplayName("not equal when lang or datatype differs")
         void inequality() {
             LiteralAst a = new LiteralAst("x", null, null);
-            assertNotEquals(a, new LiteralAst("x", "fr", null));
-            assertNotEquals(a, new LiteralAst("x", null, "xsd:string"));
+            assertNotEquals(new LiteralAst("x", "fr", null), a);
+            assertNotEquals(new LiteralAst("x", null, "xsd:string"), a);
         }
 
         @Test
         @DisplayName("implements TermAst")
         void implementsTermAst() {
-            assertTrue(new LiteralAst("x", null, null) instanceof TermAst);
+            assertInstanceOf(TermAst.class, new LiteralAst("x", null, null));
         }
     }
 
@@ -223,9 +221,9 @@ class SparqlAstTest {
             IriAst pred = new IriAst("a");
             LiteralAst obj = new LiteralAst("lit", null, null);
             TriplePatternAst t = new TriplePatternAst(s, pred, obj);
-            assertTrue(t.subject() instanceof VarAst);
-            assertTrue(t.predicate() instanceof IriAst);
-            assertTrue(t.object() instanceof LiteralAst);
+            assertInstanceOf(VarAst.class, t.subject());
+            assertInstanceOf(IriAst.class, t.predicate());
+            assertInstanceOf(LiteralAst.class, t.object());
         }
 
         @Test
@@ -317,7 +315,7 @@ class SparqlAstTest {
         @Test
         @DisplayName("implements PatternAst")
         void implementsPatternAst() {
-            assertTrue(new BgpAst(List.of()) instanceof PatternAst);
+            assertInstanceOf(PatternAst.class, new BgpAst(List.of()));
         }
     }
 
@@ -353,7 +351,7 @@ class SparqlAstTest {
             GroupGraphPatternAst g = new GroupGraphPatternAst(mutable);
             mutable.clear();
             assertEquals(1, g.patterns().size());
-            assertSame(bgp, g.patterns().get(0));
+            assertSame(bgp, g.patterns().getFirst());
         }
 
         @Test
@@ -410,7 +408,7 @@ class SparqlAstTest {
         @Test
         @DisplayName("SelectQueryAst implements QueryAst")
         void implementsQueryAst() {
-            assertTrue(new SelectQueryAst(new GroupGraphPatternAst(List.of())) instanceof QueryAst);
+            assertInstanceOf(QueryAst.class, new SelectQueryAst(new GroupGraphPatternAst(List.of())));
         }
     }
 
@@ -423,15 +421,15 @@ class SparqlAstTest {
         @Test
         @DisplayName("VarAst, IriAst, LiteralAst are TermAst")
         void termImplementations() {
-            assertTrue(new VarAst("x") instanceof TermAst);
-            assertTrue(new IriAst("y") instanceof TermAst);
-            assertTrue(new LiteralAst("z", null, null) instanceof TermAst);
+            assertInstanceOf(TermAst.class, new VarAst("x"));
+            assertInstanceOf(TermAst.class, new IriAst("y"));
+            assertInstanceOf(TermAst.class, new LiteralAst("z", null, null));
         }
 
         @Test
         @DisplayName("BgpAst is PatternAst")
         void patternImplementation() {
-            assertTrue(new BgpAst(List.of()) instanceof PatternAst);
+            assertInstanceOf(PatternAst.class, new BgpAst(List.of()));
         }
     }
 
